# solpay-codes-solana-program

./: .gitignore  Dockerfile  README.md  docker-compose.yml
solpay-codes/config/: config.dev.yml  config.local.yml  config.main.yml
solpay-codes/program/: Cargo.toml
solpay-codes/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  utils.rs
solpay-codes/program/src/affiliates/: close_affiliate_account.rs  mod.rs  redeem_reward.rs  register_affiliate_account.rs  state.rs
solpay-codes/program/src/projects/: close_project_account.rs  mod.rs  register_project_account.rs  state.rs  update_project_account.rs
solpay-codes/whitelist-token/: .gitignore
solpay-codes/whitelist-token/token-maintainer/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
solpay-codes/whitelist-token/token-maintainer/files/: wl-token-metadata.json
solpay-codes/whitelist-token/token-maintainer/src/: bundlr-upload.ts  update-metadata.ts
