[package]
name = "candy-machine-affiliates"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9.3"
solana-program = "1.11.5"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
thiserror = "1.0.32"
